# oracle-pallet

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.node  README.md  build.sh  diaChain.json  docker-compose.yml  rust-toolchain.toml
dia-batching-server/: Cargo.toml
dia-batching-server/resources/: ampe_query.graphql  ampe_schema.graphql  schema.graphql
dia-batching-server/src/: args.rs  dia.rs  handlers.rs  main.rs  price_updater.rs  storage.rs
docker/: Dockerfile  build.sh  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/dia-oracle/: Cargo.toml
pallets/dia-oracle/rpc/: Cargo.toml
pallets/dia-oracle/rpc/runtime-api/: Cargo.toml
pallets/dia-oracle/rpc/runtime-api/src/: lib.rs
pallets/dia-oracle/rpc/src/: lib.rs
pallets/dia-oracle/src/: benchmarking.rs  dia.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
