[package]
name = "dia-batching-server"
version = "0.1.0"
edition = "2018"


[dependencies]
actix-web = "3"
arc-swap = "1.4.0"
async-trait = "0.1.51"

chrono = {version = "0.4.19", features = ["serde"] }

log = "0.4.14"

pretty_env_logger = "0.4.0"

reqwest = { version = "0.10.10", features = ["json"] }

serde = { version = "1.0.130", features = ["derive"] }
smol_str = { version = "0.1.18", features = ["serde"] }

tokio = { version = "0.2.25", features = ["full"] }

serde_json = { version = "1.0.33", features = ["arbitrary_precision"]}
