[package]
name = 'node-template'
version = '3.0.0-monthly-2021-10'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://docs.substrate.io/'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.node-template-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-10'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'
dia-oracle-rpc = { version ="0.1.0", path = "../pallets/dia-oracle/rpc" }
dia-oracle-runtime-api = { version ="0.1.0", path = "../pallets/dia-oracle/rpc/runtime-api" }

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
