[package]
name = "dia-oracle-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
dia-oracle-runtime-api = { version = "0.1.0", default-features = false, path = "./runtime-api" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }


[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

