[package]
name = "dia-oracle-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
dia-oracle = { version = "0.1.0", default-features = false, path = "../../../dia-oracle" }

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.35"


[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	'frame-support/std',
	"dia-oracle/std",
]
